--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
                         <div class="intro-info-content text-center">
                             <h1 class="display-3 white-text mb-5 wow fadeInDown" data-wow-delay="0.3s">Application Rating Prediction</h1>
                             <h5 class="text-uppercase white-text mb-5 mt-1 font-weight-bold wow fadeInDown" data-wow-delay="0.3s">Bussiness Intelligence Data Analytics</h5>
-                            <a class="btn btn-light-blue btn-lg wow fadeInDown" data-wow-delay="0.3s">Details</a>
-                            <a class="btn btn-indigo btn-lg wow fadeInDown" data-wow-delay="0.3s">Dashboard</a>
+                            <a class="btn btn-light-blue btn-lg wow fadeInDown" href="details.html" data-wow-delay="0.3s">Details</a>
+                            <a class="btn btn-indigo btn-lg wow fadeInDown" href="inference.html" data-wow-delay="0.3s">Dashboard</a>
                         </div>
                     </div>
                 </div>
