--- a/index.html
+++ b/index.html
@@ -96,9 +96,6 @@
                         <li class="nav-item">
                             <a class="nav-link" href="https://public.tableau.com/profile/samyak.jain3899#!/vizhome/mini_16047483631880/Dashboard1">Dashboard</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#contact" data-offset="60">Code</a>
-                        </li>
                     </ul>
                 </div>
             </div>
@@ -114,7 +111,7 @@
                             <h1 class="display-3 white-text mb-5 wow fadeInDown" data-wow-delay="0.3s">Application Rating Prediction</h1>
                             <h5 class="text-uppercase white-text mb-5 mt-1 font-weight-bold wow fadeInDown" data-wow-delay="0.3s">Bussiness Intelligence Data Analytics</h5>
                             <a class="btn btn-light-blue btn-lg wow fadeInDown" href="details.html" data-wow-delay="0.3s">Details</a>
-                            <a class="btn btn-indigo btn-lg wow fadeInDown" href="inference.html" data-wow-delay="0.3s">Dashboard</a>
+                            <a class="btn btn-indigo btn-lg wow fadeInDown" href="https://public.tableau.com/profile/samyak.jain3899#!/vizhome/mini_16047483631880/Dashboard1" data-wow-delay="0.3s">Dashboard</a>
                         </div>
                     </div>
                 </div>
