--- a/inference.html
+++ b/inference.html
@@ -49,7 +49,7 @@
               <a class="nav-link" href="https://public.tableau.com/profile/samyak.jain3899#!/vizhome/mini_16047483631880/Dashboard1">Dashboard</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Code</a>
+              <a class="nav-link" href="implementation.html">Implementation</a>
             </li>
           </ul>
         </div>
