--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                             <a class="nav-link" href="https://public.tableau.com/profile/samyak.jain3899#!/vizhome/mini_16047483631880/Dashboard1">Dashboard</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="">Implementation</a>
+                            <a class="nav-link" href="implementation.html">Implementation</a>
                         </li>
                     </ul>
                 </div>
@@ -105,6 +105,7 @@
         </nav>
 
         <!-- Intro Section -->
+        
         <div id="home" class="view jarallax " data-jarallax='{"speed": 0.2}' style="background-image: url(img/home.jpeg); background-repeat: no-repeat; background-size: cover; background-position: center center;">
           <div class="mask rgba-black-strong">
             <div class="container h-100 d-flex justify-content-center align-items-center">
